Adding TiffViewer.showSetRescaleFactorDialog